Bug 150161 - File is not attached to e-mail from running particular macro
Summary: File is not attached to e-mail from running particular macro
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.5.0 target:7.4.0.2
Keywords: regression
Depends on:
Blocks: File-Send
  Show dependency treegraph
 
Reported: 2022-07-27 06:49 UTC by Gabor Kelemen (Collabora)
Modified: 2022-07-28 13:37 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Outlook mail dialog after running the macro (167.73 KB, image/png)
2022-07-27 06:49 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-07-27 06:49:49 UTC
Created attachment 181430 [details]
Outlook mail dialog after running the macro

This is a followup to bug 126263

When the basic macro of attachment 152612 [details] is run, the example b.pdf file in ~/Documents is not removed anymore, but not attached to the new e-mail either.

1, Have some example PDF files in ~/Documents named a.pdf, b.pdf, c.pdf, d.pdf
2, Run the basic macro in attachment 152612 [details] 

The default mail client should open with the a.pdf, b.pdf, c.pdf, d.pdf files attached.
Now b.pdf is not attached properly:
- If the default mail client is Thunderbird, the attachment name is "moz_mapi-1" as reported in bug 126263 comment 17.
- If the default mail client is Outlook, the attachment is not added as "potentially unsafe" see attachment.

Before the fixes in bug 126263 the file was attached, just removed from disk. Now it's not removed, but not attached properly either.

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5df1bb4b1b222be00d25097660c4ee33542896ea
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2022-07-27 12:27:57 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/772f7a2dc3508bdebb53b6de4a43685d517cf1ef

tdf#150161: senddoc: use corrected name url: original can be a file path

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2022-07-27 15:49:34 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/6837355d51430f66950f8b5b6f0b714ca15de1c5

tdf#150161: senddoc: use corrected name url: original can be a file path

It will be available in 7.4.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.